# SDS-Metadata

./: .env.example  .gitignore  COMPLETION_REPORT.md  Dockerfile  FIXES_APPLIED.md  LICENSE  PLATFORM_RUNNING.txt  QUICKSTART.md  README.md  RUNNING.md  RUN_NOW.txt  START_PLATFORM.md  STATUS.txt  debug_extraction.py  docker-compose.yml  pyproject.toml  requirements.txt  test_embedding.py
app/: main.py
app/application/dto/: extraction_result.py
app/application/services/: async_extraction_service.py  chunking_service.py  debug_context.py  metadata_validator.py  prompt_builder.py  text_cleaner.py
app/application/use_cases/: extract_metadata_use_case.py
app/domain/entities/: document.py
app/domain/enums/: document_status.py
app/domain/exceptions/: base.py
app/domain/repositories/: document_repository.py
app/domain/value_objects/: sds_metadata.py
app/infrastructure/configuration/: settings.py
app/infrastructure/database/: sqlite_database.py
app/infrastructure/embeddings/: ollama_embedding_client.py
app/infrastructure/llm/: ollama_health_check.py  ollama_llm_client.py
app/infrastructure/logging/: log_config.py
app/infrastructure/pdf/: document_reader.py
app/infrastructure/repositories/: sqlite_document_repository.py
app/infrastructure/vectorstore/: chroma_store.py
frontend/: app.py
scripts/: init_db.py  test_e2e.py
tests/integration/: test_sqlite_repository.py  test_text_cleaner_integration.py
tests/unit/: test_chunking_service.py  test_metadata_validator.py  test_prompt_builder.py  test_text_cleaner.py
(+4 files in other folders)
